my intro changed

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
     <div class="featured-image">
         <div class="image">
-            <img src="/assets/images/propic2.jpg" alt="avtar">
+            <img src="/assets/images/propic2.JPG" alt="avtar">
         </div>
     </div>
     <div class="scroll-icon-box">
@@ -101,10 +101,10 @@
         <div class="col">
             <div class="about-info">
                 <h3>My introduction</h3>
-                <p> Hello! i'm Jigar Parmar, a Full Stack Developer Lorem ipsum dolor sit amet consectetur adipinisi est provident sequi molestiae qui labore repellat inventore numquam possimus culpa expedita sint blanditiis facere. Odio quia veritatis numquam illo facere incidunt.
-                Dignissimos eveniet cumque praesentium rem at asperiores, aperiam ratione eius enim maxime adipisci soluta distinctio architecto amet magnam. Ducimus quibusdam doloremque adipisci repudiandae illum aspernatur facere enim non similique molestiae?
-                Fugit odit quis cumque in quae itaque omnis sapiente ea quaerat eum vel sint iure debitis quod quasi doloremque repellat, doloribus accusamus illum perspiciatis soluta deleniti. Laudantium nemo quibusdam corporis?
-                Quod harum repudiandae repellat sed delectus, minima deleniti numquam qui expedita odit nesciunt sapiente error exercitationem voluptates adipisci veniam est placeat beatae iure fugit illo quo itaque eius. Unde, sed.</p>
+                <p> Hello! I'm Jigar Parmar, a Full Stack Developer with a passion for creating dynamic and responsive web applications.
+                    Skilled in HTML, CSS, JavaScript, React, Node.js, Bootstrap. I am committed to delivering seamless user experiences and scalable solutions. <br>
+                    I love collaborating with cross-functional teams to deliver high-quality projects on time. My dedication to clean code, user friendly design, and performance optimization is reflected in my work. Let's connect and create something amazing together..!  
+                     </p>
                 <div class="about-btn">
                    <a href="assets/images/My-CV.pdf"><button class="btn">Download CV <i class="uil uil-import"></i></button></a>
                 </div>
