--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h3>My introduction</h3>
                 <p> Hello! I'm Jigar Parmar, a Full Stack Developer with a passion for creating dynamic and responsive web applications.
                     Skilled in HTML, CSS, JavaScript, React, Node.js, Bootstrap. I am committed to delivering seamless user experiences and scalable solutions. <br>
-                    I love collaborating with cross-functional teams to deliver high-quality projects on time. My dedication to clean code, user friendly design, and performance optimization is reflected in my work. Let's connect and create something amazing together..!  
+                    I love collaborating with cross-functional teams to deliver high-quality projects on time. My dedication to clean code, user friendly design, and performance optimization is reflected in my work. Let's connect and create something amazing together...!  
                      </p>
                 <div class="about-btn">
                    <a href="assets/images/My-CV.pdf"><button class="btn">Download CV <i class="uil uil-import"></i></button></a>
