--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
     <div class="featured-image">
         <div class="image">
-            <img src="/assets/images/propic2.JPG" alt="avtar">
+            <img src="./assets/images/propic2.JPG" alt="avtar">
         </div>
     </div>
     <div class="scroll-icon-box">
@@ -190,28 +190,28 @@
         <div class="project-box">
             <i class="uil uil-user"></i>
             <h3>API based app : Frontend</h3>
-            <label>8 Finished Projects</label>
+            <!-- <label>8 Finished Projects</label> -->
         </div>
         <div class="project-box">
             <i class="uil uil-briefcase-alt"></i>
-            <h3>Completed</h3>
-            <label>8 Finished Projects</label>
+            <h3>Frontend + Node js app</h3>
+            <!-- <label>8 Finished Projects</label> -->
         </div>
         <div class="project-box">
             <i class="uil uil-briefcase-alt"></i>
-            <h3>Completed</h3>
-            <label>8 Finished Projects</label>
+            <h3>Frontend + Expressjs app</h3>
+            <!-- <label>8 Finished Projects</label> -->
         </div>
-        <div class="project-box">
+        <!-- <div class="project-box">
+            <i class="uil uil-briefcase-alt"></i>
+            <h3></h3>
+            <label>8 Finished Projects</label>
+        </div> -->
+        <!-- <div class="project-box">
             <i class="uil uil-briefcase-alt"></i>
             <h3>Completed</h3>
             <label>8 Finished Projects</label>
-        </div>
-        <div class="project-box">
-            <i class="uil uil-briefcase-alt"></i>
-            <h3>Completed</h3>
-            <label>8 Finished Projects</label>
-        </div>
+        </div> -->
     </div>
 </section>
     <!-------------------------------- projects ------------------------------------------------>
