--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </ul>
             </div>
             <div class="nav-button">
-               <a href="/assets/images/My-CV.pdf"> <button class="btn"><i class="uil uil-file"></i>Download CV</button></a>
+               <a href="/assets/images/Jigar-parmarCV.pdf"> <button class="btn"><i class="uil uil-file"></i>Download CV</button></a>
             </div>
             <div class="nav-menu-btn">
                 <i class="uil uil-bars" onclick="mymenufunction()"></i>
@@ -69,7 +69,7 @@
         </div>
         <div class="featured-text-btn">
             <button class="btn blue-btn">Hire Me</button>
-          <a href="assets/images/My-CV.pdf"><button class="btn"><i class="uil uil-file"></i>Download CV</button></a>
+          <a href="assets/images/Jigar-parmarCV.pdf"><button class="btn"><i class="uil uil-file"></i>Download CV</button></a>
         </div>
         <div class="social-icon">
             <div class="icon"><a href="https://github.com/jigarparmar30"><i class="uil uil-github-alt"></i></a></div>
@@ -106,7 +106,7 @@
                     I love collaborating with cross-functional teams to deliver high-quality projects on time. My dedication to clean code, user friendly design, and performance optimization is reflected in my work. Let's connect and create something amazing together...!  
                      </p>
                 <div class="about-btn">
-                   <a href="assets/images/My-CV.pdf"><button class="btn">Download CV <i class="uil uil-import"></i></button></a>
+                   <a href="assets/images/Jigar-parmarCV.pdf"><button class="btn">Download CV <i class="uil uil-import"></i></button></a>
                 </div>
             </div>
         </div>
