--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
     <div class="featured-image">
         <div class="image">
-            <img src="./assets/images/propic2.JPG" alt="avtar">
+            <img src="./assets/images/propic.JPG" alt="avtar">
         </div>
     </div>
     <div class="scroll-icon-box">
